// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match default snapshot 1`] = `
<DocumentFragment>
  <div
    class="jsx-1818524733 avatar-root"
  />
</DocumentFragment>
`;

exports[`should match snapshot with width 1`] = `
<DocumentFragment>
  <div
    class="jsx-2018956221 avatar-root"
  />
</DocumentFragment>
`;
